fix spinning logo on ios

--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,7 @@ a:focus {
 
 .container {
   padding-top: 10px !important;
+  padding-bottom: 10px !important;
 }
 
 .nav-link {
